--- a/man's bio.html
+++ b/man's bio.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Research and Design Group</title>
+    <title>Siu Shing Man's Bio</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/man'sbio.css">
@@ -37,7 +37,98 @@
             </div>
         </div>
     </div>
-    
+    <div class="container2">
+        <div class="left"></div>
+        <div class="mid">
+            <div class="divider">
+                <span>About</span>
+            </div>
+
+            <div class="container">
+                <div class="about">
+                    <div class="stats">
+                        <div class="stat-item">
+                            <span class="number">39</span> <span class="label">Publications</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="number">7176</span> <span class="label">Reads</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="number">933</span> <span class="label">Citations</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content2">
+                    <div class="box">
+                        <div class="section-title"><span class="dot"></span> Research Interests</div>
+                        <div class="text-content">
+                            This place to write research interests.<br>
+                            This place to write research interests.<br>
+                            This place to write research interests.
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="section-title">
+                            <span class="dot"></span> Education
+                        </div>
+                        <div class="text-content">
+                            This place is a text area.<br>
+                            This place is a text area.<br>
+                            This place is a text area.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="divider">
+                <span>Biography</span>
+            </div>
+            <div class="container">
+                <div class="biography">
+                    This place is a text area.
+                </div>
+            </div> 
+
+            <div class="divider">
+                <span>Honors and Awards</span>
+            </div>
+            <div class="container">
+                <div class="biography">
+                    This place is a text area.
+                </div>
+            </div> 
+
+            <div class="divider">
+                <span>Honors and Awards</span>
+            </div>
+            <div class="container">
+                <div class="biography">
+                    <div class="section-title"><span class="dot"></span> Research Interests</div>
+                    This place is a text area.
+                    <div class="section-title"><span class="dot"></span> Research Interests</div>
+                    This place is a text area.
+                    <div class="section-title"><span class="dot"></span> Research Interests</div>
+                    This place is a text area.
+                </div>
+            </div>
+
+            <div class="divider">
+                <span>Media</span>
+            </div>
+            <div class="container">
+                <div class="biography">
+                    This place is a text area.
+                </div>
+            </div> 
+        </div>
+
+
+        <div class="right"></div>
+    </div>
+
+
+
+    <br><br>
     <footer id="contact">
         <div class="contact-container">
         <div class="contact-content"> <!-- Footer content wrapper -->
